ใช้งาน MongoDB เก็บข้อมูลการเข้าชมสินค้า

--- a/.env
+++ b/.env
@@ -13,6 +13,12 @@ DB_DATABASE=sbdb
 DB_USERNAME=root
 DB_PASSWORD=
 
+MONGO_DB_HOST=cluster0-vk2tq.mongodb.net
+MONGO_DB_PORT=27017
+MONGO_DB_DATABASE=sbdb
+MONGO_DB_USERNAME=frongser
+MONGO_DB_PASSWORD=01022549
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
