--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=45.77.36.96
 DB_PORT=3306
 DB_DATABASE=sbdb
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sbdb
+DB_PASSWORD=sbdb1234
 
 MONGO_DB_HOST=cluster0-vk2tq.mongodb.net
 MONGO_DB_PORT=27017
