--- a/.env
+++ b/.env
@@ -13,11 +13,12 @@ DB_DATABASE=sbdb
 DB_USERNAME=root
 DB_PASSWORD=
 
-MONGO_DB_HOST=cluster0-vk2tq.mongodb.net
+MONGO_DB_HOST=127.0.0.1
 MONGO_DB_PORT=27017
-MONGO_DB_DATABASE=sbdb
-MONGO_DB_USERNAME=frongser
-MONGO_DB_PASSWORD=01022549
+MONGO_DB_DATABASE=megadb
+MONGO_DB_USERNAME=
+MONGO_DB_PASSWORD=
+
 
 
 BROADCAST_DRIVER=log
